# LearnOpenGL

./: CMakeLists.txt
apps/: diffuse_maps.cpp  specular_maps.cpp
apps/funny_tinker/: imgui_docking.cpp
apps/lighting_maps/: diffuse_maps.cpp  exercise_4.cpp  specular_maps.cpp
inc/: camera.h  shader.h
resources/shaders/: material.frag
resources/shaders/lighting/: diffuse_material.frag  material1.frag  material1.vert  specular_material.frag  specular_material.vert
src/: camera.cpp  shader.cpp
